👌 IMPROVE: improvements to home page

--- a/src/home/templates/home.html
+++ b/src/home/templates/home.html
@@ -63,7 +63,7 @@
                         >
                             <h2 class="mb-3" x-text="text"></h2>
                         </div>
-                        <a id="home-cta-about-btn" class="btn btn-dark btn-lg w-50" href="#!" role="button">About Jack</a>
+                        <a id="home-cta-about-btn" class="border-dark btn btn-dark btn-lg w-50" href="#!" role="button">About Jack</a>
                     </div>
                 </div>
           </div>
