--- a/src/home/static/home/home.css
+++ b/src/home/static/home/home.css
@@ -15,6 +15,7 @@
 #home-hero-text-div {
     width: 100%;
     height: 87%;
+    margin-top: 2rem;
 }
 
 @media screen and (min-width: 700px) {
@@ -38,6 +39,11 @@
 
 #home-cta-about-btn {
     margin-top: auto;
+    margin-bottom: 1rem;
+}
+
+#home-cta-about-btn:hover {
+    border-color: white !important;
 }
 
 @media screen and (min-width: 700px) {
