--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong" style="background-color: rgba(0, 0, 0, 0.55)">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Jack Perry</a>
+    <a class="navbar-brand" href="{% url "home-page" %}">Jack Perry</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
         <li class="nav-item w-10">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="{% url "home-page" %}">Home</a>
         </li>
         <li class="nav-item w-10">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="{% url "about-page" %}">About</a>
         </li>
         <li class="nav-item w-10">
           <a class="nav-link" href="#">Projects</a>
