📦 NEW: initial commit for projects page, routing added, hello world template

--- a/src/about/templates/includes/timeline_entry.html
+++ b/src/about/templates/includes/timeline_entry.html
@@ -5,7 +5,7 @@
                 <div class="float-end text-dark">{{ timeline_entry.formatted_datetime }}</div>
                 <h4 class="card-title text-dark">{{ timeline_entry.title }}</h4>
                 <p class="card-text">{{ timeline_entry.excerpt }}</p>
-                <button class="btn btn-sm btn-outline-secondary" type="button"
+                <button class="btn btn-sm btn-outline-secondary text-dark" type="button"
                         data-bs-target="#details_{{ timeline_entry.id }}"
                         data-bs-toggle="collapse">Show Details ▼
                 </button>
