--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="{% url "about-page" %}">About</a>
         </li>
         <li class="nav-item w-10">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="{% url "projects-page" %}">Projects</a>
         </li>
         <li class="nav-item w-10">
           <a class="nav-link" href="#">Blog</a>
