📦 NEW: added blog base routing and base page

--- a/src/home/templates/home.html
+++ b/src/home/templates/home.html
@@ -17,7 +17,7 @@
                     <div id="home-hero-text-div" class="d-flex flex-column align-items-center text-white">
                         <h1 class="mb-1 display-1">Jack Perry</h1>
                         <hr class="w-50" style="border-width: 2px; opacity: 0.50;" />
-                        <div x-data="{
+                        <div class="mb-5" x-data="{
                             text: '',
                             textArray: ['Data', 'Software', 'Cloud'],
                             textIndex: 0,
