--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="{% url "projects-page" %}">Projects</a>
         </li>
         <li class="nav-item w-10">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="{% url "blog-page" %}">Blog</a>
         </li>
         <li class="nav-item w-10">
           <a class="nav-link" href="#">Contact</a>
