👌 IMPROVE: added categories

--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -7,19 +7,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
         <li class="nav-item w-10">
-          <a class="nav-link active" aria-current="page" href="{% url "home-page" %}">Home</a>
+          <a class="nav-link w-50 active text-center" aria-current="page" href="{% url "home-page" %}">Home</a>
         </li>
         <li class="nav-item w-10">
-          <a class="nav-link" href="{% url "about-page" %}">About</a>
+          <a class="nav-link w-50 active text-center" href="{% url "about-page" %}">About</a>
         </li>
         <li class="nav-item w-10">
-          <a class="nav-link" href="{% url "projects-page" %}">Projects</a>
+          <a class="nav-link w-50 active text-center" href="{% url "projects-page" %}">Projects</a>
         </li>
         <li class="nav-item w-10">
-          <a class="nav-link" href="{% url "blog-page" %}">Blog</a>
+          <a class="nav-link w-50 active text-center" href="{% url "blog-page" %}">Blog</a>
         </li>
         <li class="nav-item w-10">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link w-50 active text-center" href="#">Contact</a>
         </li>
       </ul>
     </div>
