--- a/src/blog/templates/includes/post.html
+++ b/src/blog/templates/includes/post.html
@@ -1,12 +1,17 @@
 {% load static %}
 
-<div class="card m-5 bg-dark text-light rounded" style="width: 30rem; height: 40rem;">
+<div class="card m-5 bg-dark text-light rounded" style="width: 30rem; height: 35rem;">
     <div class="card-img text-center py-3">
         <img class="card-img-top" src="{% static "blog/images/"|add:post.image_name %}" alt="Card image cap" style="width: 10rem;">
     </div>
     <div class="card-block p-3 d-flex flex-column justify-content-between h-100">
-        <h4 class="card-title text-center">{{ post.title }}</h4>
-        <h6 class="fst-italic">Publish Date: {{ post.published_at }}</h6>
+        <div>
+            <h4 class="card-title">{{ post.title }}</h4>
+            <h6 class="fst-italic">Publish Date: {{ post.published_at }}</h6>
+            {% for category in post.categories_as_list %}
+                <span class="badge rounded-pill bg-primary">{{ category }}</span>
+            {% endfor %}
+        </div>
         <hr />
         <p class="card-text">{{ post.excerpt }}</p>
         <a href="{{ post.blog_link }}" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Read More</a>
