👌 IMPROVE: finalized draft of blog page, and added new CDNs in

--- a/src/blog/templates/blog.html
+++ b/src/blog/templates/blog.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="py-4 bg-light flex-column d-flex align-items-center">
+    <div class="py-4 flex-column d-flex align-items-center">
         <h1>Blogposts</h1>
         <div class="d-flex justify-content-around flex-wrap">
             {% for post in posts %}
