--- a/src/blog/templates/includes/post.html
+++ b/src/blog/templates/includes/post.html
@@ -1,12 +1,12 @@
 {% load static %}
 
-<div class="card m-5 bg-dark text-light rounded" style="width: 30rem; height: 35rem;">
+<div class="card m-5 bg-light text-light rounded border border-3 border-primary shadow-lg" style="width: 30rem; height: 35rem; box-shadow: 0 4px 2px -2px gray;">
     <div class="card-img text-center py-3">
-        <img class="card-img-top" src="{% static "blog/images/"|add:post.image_name %}" alt="Card image cap" style="width: 10rem;">
+        <img class="card-img-top" src="{% static "blog/images/"|add:post.image_name %}" alt="Card image cap" style="width: {{ post.image_size }};">
     </div>
     <div class="card-block p-3 d-flex flex-column justify-content-between h-100">
         <div class="d-flex flex-column justify-content-end h-100">
-            <h4 class="card-title">{{ post.title }}</h4>
+            <h4 class="card-title text-dark">{{ post.title }}</h4>
             <h6 class="fst-italic">Publish Date: {{ post.published_at }}</h6>
             <div class="d-flex">
                 {% for category in post.categories_as_list %}
@@ -14,8 +14,8 @@
                 {% endfor %}
             </div>
         </div>
-        <hr />
-        <p class="card-text">{{ post.excerpt }}</p>
+        <hr class="text-primary border-top-3" />
+        <p class="card-text text-dark">{{ post.excerpt }}</p>
         <a href="{{ post.blog_link }}" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Read More</a>
     </div>
 </div>
