👌 IMPROVE: routing done for show project page

--- a/src/about/templates/about.html
+++ b/src/about/templates/about.html
@@ -11,14 +11,14 @@
 
 {% block content %}
     <div class="py-4 bg-light flex-column d-flex align-items-center">
-        <h1>About Jack</h1>
+        <h1>ABOUT JACK</h1>
         <div class="container pb-4 bg-light">
             {% for timeline_entry in timeline_entries %}
                 {% include "includes/timeline_entry.html" %}
             {% endfor %}
         </div>
         <hr class="w-75"/>
-        <h1>Skills</h1>
+        <h1>SKILLS</h1>
         <div class="d-flex justify-content-around flex-wrap">
             {% for skill in skills %}
                 {% include "includes/skill_card.html" %}
