--- a/src/blog/templates/blog.html
+++ b/src/blog/templates/blog.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="py-4 flex-column d-flex align-items-center">
-        <h1>Blogposts</h1>
+        <h1>BLOGPOSTS</h1>
         <div class="d-flex justify-content-around flex-wrap">
             {% for post in posts %}
                 {% include "includes/post.html" %}
