--- a/src/blog/templates/includes/post.html
+++ b/src/blog/templates/includes/post.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="card m-5 bg-light text-light rounded border border-3 border-dark shadow-lg d-flex flex-column justify-content-between" style="width: 30rem; height: 35rem; box-shadow: 0 4px 2px -2px gray;">
+<div class="card m-5 bg-white text-light rounded border border-3 border-dark shadow-lg d-flex flex-column justify-content-between" style="width: 30rem; height: 35rem; box-shadow: 0 4px 2px -2px gray;">
     <div class="card-img text-center py-3">
         <img class="card-img-top" src="{% static "blog/images/"|add:post.image_name %}" alt="Card image cap" style="width: {{ post.image_size }};">
     </div>
