--- a/src/projects/templates/includes/project.html
+++ b/src/projects/templates/includes/project.html
@@ -1,8 +1,8 @@
 {% load static %}
 
-<div class="card m-5 bg-light text-light rounded border border-3 border-dark shadow-lg d-flex flex-column justify-content-between" style="width: 30rem; height: 35rem; box-shadow: 0 4px 2px -2px gray;">
+<div class="card m-5 bg-white text-light rounded border border-3 border-dark shadow-lg d-flex flex-column justify-content-between" style="width: 30rem; height: 35rem; box-shadow: 0 4px 2px -2px gray;">
     <div class="card-img text-center py-3 mt-auto">
-        <img class="card-img-top" src="{% static "projects/images/"|add:project.image_name %}" alt="Card image cap" style="width: 15rem;">
+        <img class="card-img-top" src="{% static "projects/images/"|add:project.image_name %}" alt="Project image" style="width: 15rem;">
     </div>
     <div class="card-block p-3 d-flex flex-column justify-content-between h-auto">
         <div class="d-flex flex-column justify-content-end h-100 mt-5 mb-auto">
