--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -19,7 +19,7 @@
           <a class="nav-link w-50 active text-center" href="{% url "blog-page" %}">Blog</a>
         </li>
         <li class="nav-item w-10">
-          <a class="nav-link w-50 active text-center" href="#">Contact</a>
+          <a class="nav-link w-50 active text-center" href="{% url "contact-page" %}" >Contact</a>
         </li>
       </ul>
     </div>
