--- a/src/home/templates/home.html
+++ b/src/home/templates/home.html
@@ -64,7 +64,7 @@
                         >
                             <span class="mb-3 display-5" x-text="text"></span><span class="display-5">&nbsp;Engineer</span>
                         </div>
-                        <a id="home-cta-about-btn" class="border-dark btn btn-dark btn-lg w-50" href="{% url "about-page" %}" role="button">About Jack</a>
+                        <a id="home-cta-about-btn" class="border-dark btn btn-primary btn-lg w-50" href="{% url "about-page" %}" role="button">About Jack</a>
                     </div>
                 </div>
           </div>
