--- a/src/contact/templates/contact.html
+++ b/src/contact/templates/contact.html
@@ -14,7 +14,7 @@
         <div class="pt-5 pb-5 bg-white rounded border border-3 border-dark shadow-lg w-75 h-75 d-flex flex-column align-items-center justify-content-around">
             <div class="d-flex flex-column justify-content-center align-items-center w-75">
                 <div>
-                    <h1>CONTACT JACK</h1>
+                    <h1>Contact Jack</h1>
                 </div>
                 <hr class="text-primary w-90" style="padding: 0.15rem;" />
             </div>
