--- a/src/projects/templates/projects.html
+++ b/src/projects/templates/projects.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="py-4 flex-column d-flex align-items-center">
-        <h1>PROJECTS</h1>
+        <h1>Projects</h1>
         <div class="d-flex justify-content-around flex-wrap">
             {% for project in projects %}
                 {% include "includes/project.html" %}
