--- a/src/about/templates/includes/skill_card.html
+++ b/src/about/templates/includes/skill_card.html
@@ -1,16 +1,16 @@
 {% load static %}
 
-<div class="card m-5 bg-white text-light rounded border border-3 border-dark shadow-lg d-flex flex-column justify-content-between" style="width: 30rem; height: 30rem;">
+<div class="pt-5 pb-5 card m-5 bg-white text-light rounded border border-3 align-items-center border-dark shadow-lg d-flex flex-column justify-content-between" style="width: 30rem; height: 30rem;">
     <div class="card-img text-center py-3">
         <img class="card-img-top" src="{% static "about/images/"|add:skill.image_name %}" alt="Card image cap" style="width: 10rem;">
     </div>
     <div class="card-block">
         <h4 class="card-title text-center text-dark">{{ skill.title }}</h4>
         <hr />
-        <ul>
-            {% for bullet_point in skill.excerpt_as_list %}
-                <li class="card-text text-dark">{{ bullet_point }}</li>
-            {% endfor %}
-        </ul>
+    </div>
+    <div class="ps-5 pe-5">
+        {% for skill_item in skill.excerpt_as_list %}
+            <span class="badge rounded-pill bg-primary me-1">{{ skill_item }}</span>
+        {% endfor %}
     </div>
 </div>
