--- a/src/home/static/home/home.css
+++ b/src/home/static/home/home.css
@@ -37,7 +37,41 @@
 }
 
 #home-cta-about-btn {
-    margin-top: auto;
+    border-radius: 4px;
+    background-color: #cf6766;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+#home-cta-about-btn span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+#home-cta-about-btn span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+#home-cta-about-btn:hover span {
+    padding-right: 25px;
+}
+
+#home-cta-about-btn:hover span:after {
+    opacity: 1;
+    right: 0;
 }
 
 #home-cta-about-btn:hover {
