--- a/src/static/app.css
+++ b/src/static/app.css
@@ -5,3 +5,15 @@
 .w-90 {
     width: 90%;
 }
+
+.w-95 {
+    width: 95%;
+}
+
+.h-90 {
+    height: 90%;
+}
+
+* {
+    font-family: 'Open Sans Condensed', sans-serif;
+}
