--- a/src/about/templates/about.html
+++ b/src/about/templates/about.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="py-4 flex-column d-flex align-items-center" style="background: linear-gradient(#f8f9fa, #cf6766);">
+    <div class="py-4 flex-column d-flex align-items-center" style="background: linear-gradient(#f8f9fa, #0d6efd);">
          <h1 class="text-center">About Jack</h1>
         <div class="container pb-4">
             {% for timeline_entry in timeline_entries %}
