--- a/src/blog/templates/blog.html
+++ b/src/blog/templates/blog.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="py-4 flex-column d-flex align-items-center">
+    <div class="py-4 flex-column d-flex align-items-center" style="background: linear-gradient(#f8f9fa, #0d6efd);">
         <h1>Blogposts</h1>
         <div class="d-flex justify-content-around flex-wrap">
             {% for post in posts %}
