--- a/src/contact/templates/contact.html
+++ b/src/contact/templates/contact.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid h-100 w-100 flex-column d-flex align-items-center justify-content-center">
+    <div class="container-fluid h-100 w-100 flex-column d-flex align-items-center justify-content-center" style="background: linear-gradient(#f8f9fa, #0d6efd);">
         <div class="pt-5 pb-5 bg-white rounded border border-3 border-dark shadow-lg w-75 h-75 d-flex flex-column align-items-center justify-content-around">
             <div class="d-flex flex-column justify-content-center align-items-center w-75">
                 <div>
