--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,6 +19,7 @@
     {% block css_files %}
     {% endblock %}
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <script defer src="{% static 'js/htmx.min.js' %}"></script>
 </head>
 <body class="h-100 w-100">
     <header id="main-navigation">
