👌 IMPROVE: responsiveness added

--- a/src/about/static/about/about.css
+++ b/src/about/static/about/about.css
@@ -1,3 +1,25 @@
 body {
     background-color: #f8f9fa !important;
 }
+
+@media only screen and (max-width: 750px) {
+    .float-end {
+        float: none!important;
+    }
+}
+
+.w-35 {
+    width: 35%!important;
+}
+
+@media only screen and (max-width: 1000px) {
+    .w-35 {
+        width: 40%!important;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .w-35 {
+        width: 90%!important;
+    }
+}
