--- a/src/about/templates/about.html
+++ b/src/about/templates/about.html
@@ -12,14 +12,16 @@
 {% block content %}
     <div class="py-4 flex-column d-flex align-items-center" style="background: linear-gradient(#f8f9fa, #0d6efd);">
          <h1 class="text-center">About Jack</h1>
-        <div class="container pb-4">
-            {% for timeline_entry in timeline_entries %}
-                {% include "includes/timeline_entry.html" %}
-            {% endfor %}
+        <div class="pb-4 w-100">
+            <div class="container">
+                {% for timeline_entry in timeline_entries %}
+                    {% include "includes/timeline_entry.html" %}
+                {% endfor %}
+            </div>
         </div>
         <hr class="w-100"/>
         <h1 class="text-center">Skills</h1>
-        <div class="d-flex justify-content-around flex-wrap">
+        <div class="d-flex justify-content-around flex-wrap w-100">
             {% for skill in skills %}
                 {% include "includes/skill_card.html" %}
             {% endfor %}
