--- a/src/about/templates/includes/skill_card.html
+++ b/src/about/templates/includes/skill_card.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="pt-5 pb-5 card m-5 bg-white text-light rounded border border-3 align-items-center border-dark shadow-lg d-flex flex-column justify-content-between" style="width: 30rem; height: 30rem;">
+<div class="pt-2 pb-2 card m-4 bg-white text-light rounded border border-3 align-items-center border-dark shadow-lg d-flex flex-column justify-content-between w-35">
     <div class="card-img text-center py-3">
         <img class="card-img-top" src="{% static "about/images/"|add:skill.image_name %}" alt="Card image cap" style="width: 10rem;">
     </div>
