--- a/src/projects/static/projects/project-details.css
+++ b/src/projects/static/projects/project-details.css
@@ -1,3 +1,17 @@
 body {
     background-color: #f8f9fa !important;
 }
+
+@media only screen and (max-width: 1000px) {
+    .w-75 {
+        width: 95%!important;
+    }
+
+    .w-25 {
+        width: 75%!important;
+    }
+
+    p {
+        font-size: 0.90rem!important;
+    }
+}
