--- a/src/projects/static/projects/projects.css
+++ b/src/projects/static/projects/projects.css
@@ -1,3 +1,25 @@
 body {
     background-color: #f8f9fa !important;
 }
+
+@media only screen and (max-width: 1250px) {
+    .w-25 {
+        width:35%!important;
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    .w-25 {
+        width: 55% !important;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .w-25 {
+        width: 100%!important;
+    }
+
+    .m-5 {
+        margin: 2rem 1rem!important;
+    }
+}
