📦 NEW: added og meta tags

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,6 +7,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:title" content="Jack Perry Portfolio">
+    <meta property="og:description" content="Jack Perry Portfolio web site">
+    <meta property="og:image" content="https://storage.googleapis.com/jack-p-portfolio-static-bucket/home/images/jack-and-skylord.png">
+    <meta property="og:url" content="https://jack-p-portfolio-django.uc.r.appspot.com/">
     <title>
         {% block title %}
         {% endblock %}
